# docx_template_auto_gen_pro

./: .gitignore  README.md  main.py  pyproject.toml  run.py  run_app.cmd  sample_template.docx  sample_template.py  test.docx  word-template-pro.cmd  word-template-pro.vbs
src/word_template_pro/: __main__.py  batch_dialog.py  database.py  field_widgets.py  main_window.py  template_engine.py  template_manager_dialog.py
